Fix layout issues

--- a/responsive_design/02-1-styles.css
+++ b/responsive_design/02-1-styles.css
@@ -370,21 +370,22 @@ ul.row {
   width: calc((100% / 2) - 2rem);
 }
 @media (max-width: 767px) {
-    :root {
-        --section-padding: 2rem 0 0;
-        --section-body-padding: 2rem 0 0;
-    }
-.ul.row, .row {
+  :root {
+    --section-padding: 2rem 0 0;
+    --section-body-padding: 2rem 0 0;
+  }
+  .ul.row,
+  .row {
     flex-direction: column;
     margin: 0;
-}
-[class^="col-"] {
+  }
+  [class^="col-"] {
     margin: 0 0 3rem 0;
-}
-.col-1-3, .col-1-2 {
+  }
+  .col-1-3,
+  .col-1-2 {
     width: 100%;
-}
-
+  }
 }
 /* Navbar
       ============================= */
@@ -435,9 +436,9 @@ ul.row {
   width: 100%;
 }
 @media (max-width: 767px) {
-    .navbar-menu {
-        display: none;
-    }
+  .navbar-menu {
+    display: none;
+  }
 }
 
 /* Header
